<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:checked="true"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_search_profiles"
            android:icon="@drawable/ic_nav_search_profile"
            android:title="@string/saved_search_profiles"
            app:actionLayout="@layout/nav_menu_counter_tv" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_nav_favorite"
            android:title="@string/favorites"
            app:actionLayout="@layout/nav_menu_counter_tv" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:visible="false"
            android:enabled="false"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/info" />
    </group>

</menu>
